--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -6,6 +6,7 @@
 body {
     font-size: 24px;
     font-family: var(--principal-font);
+    background-color: var(--light-grayish-cyan);
 }
 
 :root {
