--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,5 +1,6 @@
 
 @import url("main.css");
+@import url("first-section.css");
 
 
 
@@ -12,7 +13,8 @@ body {
 :root {
 
     /*Colors*/
-    
+
+    --strong-cyan: #26c0ab;
     --very-dark-cyan: #00494d;
     --dark-grayish-cyan: #5e7a7d;
     --grayish-cyan: #7f9c9f;
