--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -28,5 +28,5 @@ main {
     background-color: var(--white);
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
-    padding: 0 1.5em 0 1.5em;
+    padding: 0 1.5em 2em 1.5em;
 }
