--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -25,6 +25,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 318px;
     background-color: var(--white);
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
