:construction: feat: Construindo a funcionalidade principal da calculadora.

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -22,6 +22,7 @@ body {
     --light-grayish-cyan: #c5e4e7;
     --very-light-grayish-cyan: #f4fafa;
     --white: #ffffff;
+    --orange: #db883b;
 
     /*Font*/
 
