--- a/assets/style/first-section.css
+++ b/assets/style/first-section.css
@@ -13,6 +13,13 @@
     padding: 3em 0 .5em 0;
 }
 
+.alert__error {
+    font-size: 12px;
+    color: var(--orange);
+    padding-left: 19em;
+    display: none;
+}
+
 .bill__number,
 .people__number {
     width: 318px;
@@ -65,11 +72,7 @@ input:focus {
     column-gap: .75em;
 }
 
-.btn-tip-5,
-.btn-tip-10,
-.btn-tip-15,
-.btn-tip-25,
-.btn-tip-50 {
+.btn-tip {
     width: 100%;
     height: 50px;
     background-color: var(--very-dark-cyan);
