--- a/assets/style/second-section.css
+++ b/assets/style/second-section.css
@@ -11,10 +11,11 @@
 
 .results__content {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    column-gap: 3em;
+    grid-template-columns: 90px 160px;
+    column-gap: 1em;
     row-gap: 1em;
     padding: 2em 0 1.5em 0;
+    justify-items: end;
 }
 
 .tip__content,
@@ -26,6 +27,10 @@
 .results__text {
     font-size: 15px;
     color: var(--white);
+}
+
+.end-text {
+    padding-right: 34px;
 }
 
 .person__text {
