--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -2,7 +2,7 @@
 @import url("main.css");
 @import url("first-section.css");
 @import url("second-section.css");
-
+@import url("desktop.css");
 
 
 body {
