--- a/assets/style/desktop.css
+++ b/assets/style/desktop.css
@@ -10,4 +10,11 @@
 
     }
 
+    .container__results {
+        height: 400px;
+    }
+
+    .results__content {
+        padding: 4.5em 0 5em 0;
+    }
 }
